src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/not_array_gateway.php
<?php

return [
    'expectedError' => 'Property "gateway" must have an object as value',
    'expectedPropertyPath' => 'gateway',
    'configuration' => [
        'gateway' => null,
        'raa' => [],
        'sraa' => [],
        'email_templates' => [],
    ]
];
